package bikeproject;

public class BikeDriver {

	public static void main(String[] args) {
		
		RoadBike bike1 = new RoadBike();
		RoadBike bike2 = new RoadBike("drop", "tourer", "semi-grip", "comfort", 14, 25, 18);		
		MountainBike bike3 = new MountainBike();
		Bike bike4 = new Bike();
		
		bike1.printDescription();
		bike2.printDescription();
		bike3.printDescription();
		bike4.printDescription();

		bike1.setPostHeight(20);
		bike1.printDescription();

		System.out.println();
		System.out.println(bike2.isFolded());
		bike2.fold();
		System.out.println(bike2.isFolded());
		bike2.unfold();
		System.out.println(bike2.isFolded());
	}//end method main

}//end class BikeDriver
