package bikeproject;

public interface Foldable {

    boolean isFolded();
    void fold();
    void unfold();
}
